--- a/Perceptron/04_Perceptron_problem.ipynb
+++ b/Perceptron/04_Perceptron_problem.ipynb
@@ -13,7 +13,8 @@
    "id": "6d7ca026",
    "metadata": {},
    "source": [
-    "### `Not matter what Perceptron can not perform XOR functionality`"
+    "### `Not matter what Perceptron can not perform XOR functionality`\n",
+    "`It works on Linear data only`"
    ]
   },
   {
