keras in regression

--- a/Back_Propogation/Back_propogation_Manual.ipynb
+++ b/Back_Propogation/Back_propogation_Manual.ipynb
@@ -5,12 +5,12 @@
    "id": "5fd0cf72",
    "metadata": {},
    "source": [
-    "### **`Backward Propogation Manual`**"
+    "### **`Backward Propogation Manual` → `Back Propogation with Regression`**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "c11bad92",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "id": "8c07c1a8",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        "3     5             12    7"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "id": "5101896a",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "ae515462",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        " 'b2': array([[0.]])}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "id": "de4a5db1",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "b80323d6",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "id": "916150a6",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "id": "2688ad2b",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "id": "2f61932a",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "       [1.6]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "id": "657b7eed",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "id": "0963ff36",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        " 'b2': array([[0.119136]])}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,15 +305,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "id": "32286a83",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'W1': array([[0.1086094, 0.1086094],\n",
-       "        [0.1086094, 0.1086094]]),\n",
+       "{'W1': array([[0.10753323, 0.10968558],\n",
+       "        [0.10753323, 0.10968558]]),\n",
        " 'b1': array([[0.00107618],\n",
        "        [0.00107618]]),\n",
        " 'W2': array([[0.114976],\n",
@@ -321,13 +321,13 @@
        " 'b2': array([[0.124336]])}"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = df[['cgpa', 'profile_score']].values[0].reshape(2,1) # Shape(no of features, no. of training example)\n",
+    "X = df[['cgpa', 'profile_score']].values[1].reshape(2,1) # Shape(no of features, no. of training example)\n",
     "y = df[['lpa']].values[1][0]\n",
     "\n",
     "# Parameter initialization\n",
@@ -343,15 +343,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "id": "eedb5c3a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'W1': array([[0.11297267, 0.11297267],\n",
-       "        [0.11297267, 0.11297267]]),\n",
+       "{'W1': array([[0.1097295 , 0.11621583],\n",
+       "        [0.1097295 , 0.11621583]]),\n",
        " 'b1': array([[0.00162158],\n",
        "        [0.00162158]]),\n",
        " 'W2': array([[0.121376],\n",
@@ -359,13 +359,13 @@
        " 'b2': array([[0.134736]])}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = df[['cgpa', 'profile_score']].values[0].reshape(2,1) # Shape(no of features, no. of training example)\n",
+    "X = df[['cgpa', 'profile_score']].values[2].reshape(2,1) # Shape(no of features, no. of training example)\n",
     "y = df[['lpa']].values[3][0]\n",
     "\n",
     "# Parameter initialization\n",
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "id": "c952bcb8",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        " 'b2': array([[0.48646246]])}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
